* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
- Add RockyLinux 8 support

* Mon Jun 05 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.4
- Added authselect parameter

* Tue May 16 2023 Mike Riddle <mike@sicura.us> - 0.2.3
- Added support for authselect
- Added the tidy option to give the users an option to not purge
  unmanaged files

* Sat Jul 30 2022 Joshua Hoblitt <joshua@hoblitt.com> - 0.2.2
- Add support for Alma and Rocky Linux

* Sun Feb 13 2022 Trevor Vaughan <trevor@sicura.us> - 0.2.1
- Add support for Amazon Linux 2

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Tue Jul 14 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
- Add EL8 support
- Fixed the README
- Added REFERENCE.md
- Allow users to set custom settings via Hiera
- Fix `ensure = absent` in `dconf::settings`

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.1.0
- Remove Puppet 4.x support
- Add Puppet 6.x support
- Add puppetlabs/stdlib 6.x support

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.3
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Wed Jan 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.3
- Fix issue with duplicate resources when creating multiple `dconf::settings`
  resources under the same namespace.

* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.0.2
- Update to Hiera 5

* Fri Jun 01 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.1
- Initial Release